--- a/php_app/front/controllers/cadastrar.html
+++ b/php_app/front/controllers/cadastrar.html
@@ -73,7 +73,7 @@
 
 <body>
 
-    <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
+    <header class="navbar navbar-dark sticky-top bg-primary flex-md-nowrap p-0 shadow">
         <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 fs-6" href="#">Biblioteca Pedbot</a>
         <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-bs-toggle="collapse"
             data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false"
@@ -140,13 +140,13 @@
                     </h6>
                     <ul class="nav flex-column mb-2">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">
+                            <a class="nav-link" href="../../front/controllers/listagem.html">
                                 <span data-feather="file-text" class="align-text-bottom"></span>
-                                Cadastrar
+                                Listagem
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">
+                            <a class="nav-link" href="../../front/controllers/editar.html">
                                 <span data-feather="file-text" class="align-text-bottom"></span>
                                 Editar itens
                             </a>
@@ -158,17 +158,148 @@
             <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
                 <div
                     class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-                    <h1 class="h2">Dashboard</h1>
-                    <div class="btn-toolbar mb-2 mb-md-0">
-                        <div class="btn-group me-2">
-                            <button type="button" class="btn btn-sm btn-outline-secondary">Share</button>
-                            <button type="button" class="btn btn-sm btn-outline-secondary">Export</button>
+
+                    <body class="bg-body-tertiary">
+
+                        <div class="container">
+                            <main>
+                                <div class="py-5 text-center">
+                                    <h2>Cadastro de Usuario</h2>
+                                </div>
+
+                                <div class="row g-5">
+
+                                    <div class="col-md-7 col-lg-12">
+                                        <h4 class="mb-3">Billing address</h4>
+                                        <form class="needs-validation" novalidate="">
+                                            <div class="row g-3">
+                                                <div class="col-sm-6">
+                                                    <label for="nome_usuario" class="form-label">Nome completo</label>
+                                                    <input type="text" class="form-control" id="nome_usuario"
+                                                        placeholder="" value="" required="">
+                                                    <div class="invalid-feedback">
+                                                        É necessario digitar o seu nome
+                                                    </div>
+                                                </div>
+
+                                                <div class="col-sm-6">
+                                                    <label for="lastName" class="form-label">Last name</label>
+                                                    <input type="text" class="form-control" id="lastName" placeholder=""
+                                                        value="" required="">
+                                                    <div class="invalid-feedback">
+                                                        Valid last name is required.
+                                                    </div>
+                                                </div>
+
+                                                <div class="col-12">
+                                                    <label for="username" class="form-label">Username</label>
+                                                    <div class="input-group has-validation">
+                                                        <span class="input-group-text">@</span>
+                                                        <input type="text" class="form-control" id="username"
+                                                            placeholder="Username" required="">
+                                                        <div class="invalid-feedback">
+                                                            Your username is required.
+                                                        </div>
+                                                    </div>
+                                                </div>
+
+                                                <div class="col-12">
+                                                    <label for="email" class="form-label">Email <span
+                                                            class="text-body-secondary">(Optional)</span></label>
+                                                    <input type="email" class="form-control" id="email"
+                                                        placeholder="you@example.com">
+                                                    <div class="invalid-feedback">
+                                                        Please enter a valid email address for shipping updates.
+                                                    </div>
+                                                </div>
+
+                                                <div class="col-12">
+                                                    <label for="address" class="form-label">Address</label>
+                                                    <input type="text" class="form-control" id="address"
+                                                        placeholder="1234 Main St" required="">
+                                                    <div class="invalid-feedback">
+                                                        Please enter your shipping address.
+                                                    </div>
+                                                </div>
+
+                                                <div class="col-12">
+                                                    <label for="address2" class="form-label">Address 2 <span
+                                                            class="text-body-secondary">(Optional)</span></label>
+                                                    <input type="text" class="form-control" id="address2"
+                                                        placeholder="Apartment or suite">
+                                                </div>
+
+                                                <div class="col-md-5">
+                                                    <label for="country" class="form-label">Country</label>
+                                                    <select class="form-select" id="country" required="">
+                                                        <option value="">Choose...</option>
+                                                        <option>United States</option>
+                                                    </select>
+                                                    <div class="invalid-feedback">
+                                                        Please select a valid country.
+                                                    </div>
+                                                </div>
+
+                                                <div class="col-md-4">
+                                                    <label for="state" class="form-label">State</label>
+                                                    <select class="form-select" id="state" required="">
+                                                        <option value="">Choose...</option>
+                                                        <option>California</option>
+                                                    </select>
+                                                    <div class="invalid-feedback">
+                                                        Please provide a valid state.
+                                                    </div>
+                                                </div>
+
+                                                <div class="col-md-3">
+                                                    <label for="zip" class="form-label">Zip</label>
+                                                    <input type="text" class="form-control" id="zip" placeholder=""
+                                                        required="">
+                                                    <div class="invalid-feedback">
+                                                        Zip code required.
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                            <hr class="my-4">
+
+                                            <div class="form-check">
+                                                <input type="checkbox" class="form-check-input" id="same-address">
+                                                <label class="form-check-label" for="same-address">Shipping address is
+                                                    the same as my billing address</label>
+                                            </div>
+
+                                            <div class="form-check">
+                                                <input type="checkbox" class="form-check-input" id="save-info">
+                                                <label class="form-check-label" for="save-info">Save this information
+                                                    for next time</label>
+                                            </div>
+
+                                            <hr class="my-4">
+
+                                            <button class="w-100 btn btn-primary btn-lg" type="submit">Continue to
+                                                checkout</button>
+                                        </form>
+                                    </div>
+                                </div>
+                            </main>
+
+                            <footer class="my-5 pt-5 text-body-secondary text-center text-small">
+                                <p class="mb-1">© 2017–2023 Company Name</p>
+                                <ul class="list-inline">
+                                    <li class="list-inline-item"><a
+                                            href="https://getbootstrap.com/docs/5.3/examples/checkout/#">Privacy</a>
+                                    </li>
+                                    <li class="list-inline-item"><a
+                                            href="https://getbootstrap.com/docs/5.3/examples/checkout/#">Terms</a></li>
+                                    <li class="list-inline-item"><a
+                                            href="https://getbootstrap.com/docs/5.3/examples/checkout/#">Support</a>
+                                    </li>
+                                </ul>
+                            </footer>
                         </div>
-                        <button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle">
-                            <span data-feather="calendar" class="align-text-bottom"></span>
-                            This week
-                        </button>
-                    </div>
+
+                    </body>
                 </div>
             </main>
         </div>
