modificando tela menu do sistema

--- a/php_app/front/dashboard/menu.html
+++ b/php_app/front/dashboard/menu.html
@@ -73,7 +73,7 @@
 
 <body>
 
-  <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
+  <header class="navbar navbar-dark sticky-top bg-primary flex-md-nowrap p-0 shadow">
     <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 fs-6" href="#">Biblioteca Pedbot</a>
     <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-bs-toggle="collapse"
       data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
@@ -81,7 +81,7 @@
     </button>
 
     <div class="navbar-nav">
-      <div class="nav-item text-nowrap">
+      <div class="nav-item text-nowrap text-light">
         <a class="nav-link px-3" href="#">Voltar ao menu</a>
       </div>
     </div>
@@ -98,6 +98,12 @@
                 Cadastro
               </a>
 
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../controllers/listagem.html">
+                <span data-feather="listagem" class="align-text-bottom"></span>
+                Listagem de Usuarios
+              </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="../controllers/listagem.html">
@@ -125,32 +131,22 @@
       <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
         <div
           class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-          <h1 class="h2">Dashboard</h1>
-          <div class="btn-toolbar mb-2 mb-md-0">
-            <div class="btn-group me-2">
-              <button type="button" class="btn btn-sm btn-outline-secondary">Share</button>
-              <button type="button" class="btn btn-sm btn-outline-secondary">Export</button>
-            </div>
-            <button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle">
-              <span data-feather="calendar" class="align-text-bottom"></span>
-              This week
-            </button>
-          </div>
+          <h1 class="h2">Usuarios</h1>
         </div>
 
-        <h2>Livros</h2>
         <div class="table-responsive">
           <table class="table table-striped table-sm">
             <thead>
               <tr>
                 <th scope="col">#</th>
-                <th scope="col">Titulo</th>
-                <th scope="col">Qtd paginas</th>
-                <th scope="col">Autor</th>
-                <th scope="col">Editora</th>
+                <th scope="col">Nome</th>
+                <th scope="col">Livro</th>
+                <th scope="col">Data do aluguel</th>
+                <th scope="col">Status</th>
               </tr>
             </thead>
             <tbody>
+
               <tr>
                 <td>1</td>
                 <td>random</td>
