atualização rota dos links

--- a/php_app/front/controllers/list/list_users.html
+++ b/php_app/front/controllers/list/list_users.html
@@ -104,7 +104,7 @@
 
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../../front/dashboard/books.html">
+                            <a class="nav-link" href="../list/list_books.html">
                                 <span data-feather="list_users" class="align-text-bottom"></span>
                                 Livros
                             </a>
