alteração na tela de cadastro de autores

--- a/php_app/front/controllers/registers/register_authors.html
+++ b/php_app/front/controllers/registers/register_authors.html
@@ -115,13 +115,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../../controllers/registers/register_costumers.html">
-                                <span data-feather="Usuario" class="align-text-bottom"></span>
-                                Usuarios
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="../../controllers/registers/register_books.html">
+                            <a class="nav-link" href="../../controllers/registers/register_employees.html">
                                 <span data-feather="Funcionário(a)" class="align-text-bottom"></span>
                                 Funcionário(a)
                             </a>
@@ -132,6 +126,12 @@
                             <span>Opções</span>
                         </h6>
                         <ul class="nav flex-column mb-2">
+                            <li class="nav-item">
+                                <a class="nav-link" href="../../controllers/registers/register_rentals.html">
+                                  <span name="name" class="align-text-bottom"></span>
+                                  Alugar livro
+                                </a>
+                              </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="../list/list_users.html">
                                     <span data-feather="file-text" class="align-text-bottom"></span>
