atualização na tela do menu

--- a/php_app/front/dashboard/menu.html
+++ b/php_app/front/dashboard/menu.html
@@ -84,21 +84,26 @@
   <div class="container-fluid">
     <div class="row">
       <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
-        <div class="position-sticky pt-4 sidebar-sticky px-3 fs-6">
+        <div class="position-sticky pt-3 sidebar-sticky px-3 fs-6">
           <ul class="nav flex-column">
             <li class="nav-item">
-              <h6
-                class="sidebar-heading d-flex justify-content-between align-items-center fs-6 px-3 mt-4 mb-1 text-muted text-uppercase">
-                <span>Menu</span>
-              </h6>
-
-
+              <a class="nav-link active" aria-current="page" href="#">
+                <span data-feather="home" class="align-text-bottom"></span>
+                Menu
+              </a>
+            </li>
             <li class="nav-item">
               <a class="nav-link" href="../controllers/registers/register_costumers.html">
                 <span data-feather="listagem" class="align-text-bottom"></span>
                 Cadastro
               </a>
             </li>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../controllers/registers/register_rentals.html">
+                <span name="name" class="align-text-bottom"></span>
+                Alugar livro
+              </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="../controllers/list/list_users.html">
@@ -109,25 +114,19 @@
             <li class="nav-item">
               <a class="nav-link" href="../../controllers/registers/register_publishers.html">
                 <span data-feather="leitores" class="align-text-bottom"></span>
-                Editoras
+                Listagem das Editoras
               </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="../../front/dashboard/books.html">
                 <span data-feather="listagem" class="align-text-bottom"></span>
-                Listagem de livros
+                Listagem de Livros
               </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="../controllers/list/list_authors.html">
                 <span data-feather="leitores" class="align-text-bottom"></span>
-                Listagem de autores
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="../controllers/registers/register_rental.html">
-                <span name="name" class="align-text-bottom"></span>
-                Alugar livro
+                Listagem de Autores
               </a>
             </li>
 
