--- a/php_app/front/controllers/registers/register_publishers.html
+++ b/php_app/front/controllers/registers/register_publishers.html
@@ -101,9 +101,98 @@
                                 Usuarios
                             </a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../../controllers/registers/register_authors.html">
+                                <span data-feather="autores" class="align-text-bottom"></span>
+                                Autores
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../../controllers/registers/register_books.html">
+                                <span data-feather="Livros" class="align-text-bottom"></span>
+                                Livros
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../../controllers/registers/register_employees.html">
+                                <span data-feather="Funcionário(a)" class="align-text-bottom"></span>
+                                Funcionário(a)
+                            </a>
+                        </li>
+                        <h6
+                            class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted text-uppercase">
+                            <span>Opções</span>
+                        </h6>
+                        <ul class="nav flex-column mb-2">
+                            <li class="nav-item">
+                                <a class="nav-link" href="../../controllers/registers/register_rentals.html">
+                                    <span name="name" class="align-text-bottom"></span>
+                                    Alugar livro
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="../list/list_users.html">
+                                    <span data-feather="file-text" class="align-text-bottom"></span>
+                                    Listagem
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="../edit/edit_users.html">
+                                    <span data-feather="file-text" class="align-text-bottom"></span>
+                                    Editar itens
+                                </a>
+                            </li>
+                        </ul>
                     </ul>
                 </div>
             </nav>
+
+            <main class="col-9 ms-sm-auto col-lg-10 px-md-4">
+                <div
+                    class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+
+                    <body class="bg-body-tertiary">
+
+                        <div class="container">
+                            <main>
+                                <div class="py-5 ml-2">
+                                    <h2>Cadastro de Editoras</h2>
+                                    <div class="row g-5 pt-5">
+                                        <div class="col-md-7 col-lg-10">
+                                            <h5 class="mb-3">Informações revelantes sobre a editora</h5>
+                                        </div>
+                                    </div>
+                                    <form class="needs-validation"
+                                        action="../../../pdo/registers/register_publishers.php" method="post"
+                                        novalidate="">
+                                        <div class="row g-3">
+                                            <div class="col-sm-7">
+                                                <label for="name_publisher" class="form-label">Nome da editora</label>
+                                                <input type="text" class="form-control" name="name" id="name_publisher"
+                                                    placeholder="Editora São Miguel" value="" required="">
+                                                <div class="invalid-feedback">
+                                                    É necessario digitar o nome da editora.
+                                                </div>
+                                                <hr class="my-4">
+
+                                                <button class="w-20 btn btn-primary btn-ls"
+                                                    type="submit">Enviar</button>
+                                            </div>
+                                        </div>
+                                    </form>
+                                </div>
+                                <footer class="text-muted py-5">
+                                    <div class="container">
+                                        <p class="mb-1">© 2023 Biblioteca Pedbot</p>
+                                    </div>
+                                </footer>
+                            </main>
+                        </div>
+
+                    </body>
+
+                </div>
+            </main>
         </div>
     </div>
 
