modificação na tela de cadastro de livros

--- a/php_app/front/controllers/registers/register_books.html
+++ b/php_app/front/controllers/registers/register_books.html
@@ -120,12 +120,6 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../../controllers/registers/register_costumers.html">
-                                <span data-feather="Usuario" class="align-text-bottom"></span>
-                                Usuarios
-                            </a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link" href="../../controllers/registers/register_employees.html">
                                 <span data-feather="funcionários" class="align-text-bottom"></span>
                                 Funcionário(a)
@@ -139,6 +133,12 @@
                         <span>Opções</span>
                     </h6>
                     <ul class="nav flex-column mb-2">
+                        <li class="nav-item">
+                            <a class="nav-link" href="../../controllers/registers/register_rentals.html">
+                                <span name="name" class="align-text-bottom"></span>
+                                Alugar livro
+                            </a>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link" href="../list/list_users.html">
                                 <span data-feather="file-text" class="align-text-bottom"></span>
@@ -171,7 +171,9 @@
 
                                     <div class="col-md-7 col-lg-10">
                                         <h5 class="mb-3">Informações revelantes sobre o livro</h5>
-                                        <form class="needs-validation" action="../../../pdo/registers/register_books.php" method="post" novalidate="">
+                                        <form class="needs-validation"
+                                            action="../../../pdo/registers/register_books.php" method="post"
+                                            novalidate="">
                                             <div class="row g-3">
                                                 <div class="col-sm-7">
                                                     <label for="titule_book" class="form-label">Titulo</label>
@@ -234,8 +236,7 @@
 
                                             <hr class="my-4">
 
-                                            <button class="w-20 btn btn-primary btn-ls"
-                                                type="submit">Enviar</button>
+                                            <button class="w-20 btn btn-primary btn-ls" type="submit">Enviar</button>
                                         </form>
                                     </div>
                                 </div>
