atualizações rm de extensão .html

--- a/php_app/front/menu/menu.html
+++ b/php_app/front/menu/menu.html
@@ -74,8 +74,8 @@
       <div>
         <h3 class="float-md-start mt-3 mb-0">Biblioteca Pedbot</h3>
         <nav class="nav nav-masthead justify-content-center float-md-end">
-          <a class="nav-link fw-bold mt-3 py-1 px-0 active" aria-current="page" href="../controllers/registers/register_costumers.php">Cadastrar</a>
-          <a class="nav-link fw-bold mt-3 py-1 px-0" href="../controllers/list/list_costumers.php">Listagem</a>
+          <a class="nav-link fw-bold mt-3 py-1 px-0 active" aria-current="page" href="../controllers/registers/register_costumers">Cadastrar</a>
+          <a class="nav-link fw-bold mt-3 py-1 px-0" href="../controllers/list/list_costumers">Listagem</a>
         </nav>
       </div>
     </header>
