atualização pagina memu com a extensão html

--- a/php_app/front/menu/menu.html
+++ b/php_app/front/menu/menu.html
@@ -11,7 +11,7 @@
 
   <link rel="canonical" href="https://getbootstrap.com/docs/5.2/examples/cover/">
   <link href="../../bootstrap-5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
- <link href="../../bootstrap-5.2.3/dist/css/menu.css" rel="stylesheet">
+  <link href="../../bootstrap-5.2.3/dist/css/menu.css" rel="stylesheet">
 
   <style>
     .bd-placeholder-img {
@@ -74,7 +74,8 @@
       <div>
         <h3 class="float-md-start mt-3 mb-0">Biblioteca Pedbot</h3>
         <nav class="nav nav-masthead justify-content-center float-md-end">
-          <a class="nav-link fw-bold mt-3 py-1 px-0 active" aria-current="page" href="../controllers/registers/register_costumers">Cadastrar</a>
+          <a class="nav-link fw-bold mt-3 py-1 px-0 active" aria-current="page"
+            href="../controllers/registers/register_costumers">Cadastrar</a>
           <a class="nav-link fw-bold mt-3 py-1 px-0" href="../controllers/list/list_costumers">Listagem</a>
         </nav>
       </div>
@@ -84,10 +85,11 @@
       <h1>Sistema de biblioteca Pedbot</h1>
       <p class="lead">Faça seu primeiro aluguel clicando aqui.</p>
       <p class="lead">
-        <a href="../controllers/registers/register_rentals.php" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Alugar livro</a>
+        <a href="../controllers/registers/register_rentals.php"
+          class="btn btn-lg btn-secondary fw-bold border-white bg-white">Alugar livro</a>
       </p>
     </main>
-    
+
     <footer class="mt-auto text-light py-5">
       <div class="container">
         <p class="mb-1">© 2023 Biblioteca Pedbot</p>
