--- a/php_app/front/menu/menu.html
+++ b/php_app/front/menu/menu.html
@@ -12,59 +12,8 @@
   <link rel="canonical" href="https://getbootstrap.com/docs/5.2/examples/cover/">
   <link href="../../bootstrap-5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="../../bootstrap-5.2.3/dist/css/menu.css" rel="stylesheet">
+  <link rel="stylesheet" href="../../../bootstrap-5.2.3/dist/css/pages.css">
 
-  <style>
-    .bd-placeholder-img {
-      font-size: 1.125rem;
-      text-anchor: middle;
-      -webkit-user-select: none;
-      -moz-user-select: none;
-      user-select: none;
-    }
-
-    @media (min-width: 768px) {
-      .bd-placeholder-img-lg {
-        font-size: 3.5rem;
-      }
-    }
-
-    .b-example-divider {
-      height: 3rem;
-      background-color: rgba(0, 0, 0, .1);
-      border: solid rgba(0, 0, 0, .15);
-      border-width: 1px 0;
-      box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
-    }
-
-    .b-example-vr {
-      flex-shrink: 0;
-      width: 1.5rem;
-      height: 100vh;
-    }
-
-    .bi {
-      vertical-align: -.125em;
-      fill: currentColor;
-    }
-
-    .nav-scroller {
-      position: relative;
-      z-index: 2;
-      height: 2.75rem;
-      overflow-y: hidden;
-    }
-
-    .nav-scroller .nav {
-      display: flex;
-      flex-wrap: nowrap;
-      padding-bottom: 1rem;
-      margin-top: -1px;
-      overflow-x: auto;
-      text-align: center;
-      white-space: nowrap;
-      -webkit-overflow-scrolling: touch;
-    }
-  </style>
 </head>
 
 <body class="d-flex h-100 text-center text-bg-primary">
@@ -75,8 +24,8 @@
         <h3 class="float-md-start mt-3 mb-0">Biblioteca Pedbot</h3>
         <nav class="nav nav-masthead justify-content-center float-md-end">
           <a class="nav-link fw-bold mt-3 py-1 px-0 active" aria-current="page"
-            href="../controllers/registers/register_costumers">Cadastrar</a>
-          <a class="nav-link fw-bold mt-3 py-1 px-0" href="../controllers/list/list_costumers">Listagem</a>
+            href="../pages/register/registerCostumer">Cadastrar</a>
+          <a class="nav-link fw-bold mt-3 py-1 px-0" href="../pages/list/listCostumers">Listagem</a>
         </nav>
       </div>
     </header>
@@ -85,7 +34,7 @@
       <h1>Sistema de biblioteca Pedbot</h1>
       <p class="lead">Faça seu primeiro aluguel clicando aqui.</p>
       <p class="lead">
-        <a href="../controllers/registers/register_rentals.php"
+        <a href="../pages/register/registerRental.php"
           class="btn btn-lg btn-secondary fw-bold border-white bg-white">Alugar livro</a>
       </p>
     </main>
